--- a/window-service/repair-window.html
+++ b/window-service/repair-window.html
@@ -366,7 +366,7 @@
                 </ul>
                 <div class="tab-content" id="repair-price-tab">
                     <div class="tab-pane active" id="window">
-                        <div class="table-responsive table-responsive_bordered">
+                        <div class="table-responsive_bordered">
                             <table class="repair-price-table table">
                                 <tr>
                                     <th>Неиправность</th>
@@ -429,7 +429,7 @@
                         <p class="text-center"><a href="#collapse-window" class="btn btn-outline btn_size-sm btn_hidden collapsed" data-bs-toggle="collapse">Показать еще</a></p>
                     </div>
                     <div class="tab-pane" id="door">
-                        <div class="table-responsive table-responsive_bordered">
+                        <div class="table-responsive_bordered">
                             <table class="repair-price-table table">
                                 <tr>
                                     <th>Неиправность</th>
@@ -472,7 +472,7 @@
                         <p class="text-center"><a href="#collapse-door" class="btn btn-outline btn_size-sm btn_hidden collapsed collapsed" data-bs-toggle="collapse">Показать еще</a></p>
                     </div>
                     <div class="tab-pane" id="balcony">
-                        <div class="table-responsive table-responsive_bordered">
+                        <div class="table-responsive_bordered">
                             <table class="repair-price-table table">
                                 <tr>
                                     <th>Неиправность</th>
@@ -535,7 +535,7 @@
                         <p class="text-center"><a href="#collapse-balcony" class="btn btn-outline btn_size-sm btn_hidden collapsed" data-bs-toggle="collapse">Показать еще</a></p>
                     </div>
                     <div class="tab-pane" id="veranda">
-                        <div class="table-responsive table-responsive_bordered">
+                        <div class="table-responsive_bordered">
                             <table class="repair-price-table table">
                                 <tr>
                                     <th>Неиправность</th>
