--- a/Kogevna/index.html
+++ b/Kogevna/index.html
@@ -39,10 +39,10 @@
     <div class="wrap">
         <div class="container">
             <ul class="site-nav">
-                <!-- <li><a href="home.html">Главная</a></li> -->
+                <li><a href="home.html">Главная</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
                 <li><a href="services.html">Услуги</a></li>
-                <li><a href=".html"></a></li>
+                <li><a href="marketplaces.html">Маркетплейсы</a></li>
             </ul>
         </div>
     </div>
