--- a/Kogevna/home.html
+++ b/Kogevna/home.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <!-- /preview -->
-        <div class="container">
+        <div class="container pos-rel">
             <!-- callback-block -->
             <div class="callback-block callback-block_padding pos-rel bg_primary">
                 <div class="callback-block__content d-md-flex align-items-center">
