--- a/TDR/index.html
+++ b/TDR/index.html
@@ -54,8 +54,8 @@
             <!-- /header -->
             <div class="container">
                 <div class="preview__text">
-                    <h1 class="title_size-xl preview__title anim-items anim__show">DA <span class="text_primary">APPS</span></h1>
-                    <p class="anim-items anim__showL">Автоматизированная платформа для работы <br class="d-none d-md-block">с мобильными приложениями</p>
+                    <h1 class="title_size-xl preview__title">DA <span class="text_primary">APPS</span></h1>
+                    <p>Автоматизированная платформа для работы <br class="d-none d-md-block">с мобильными приложениями</p>
                     <div class="preview__btn">
                         <a href="https://t.me/da_apps_support" class="btn">
                             Связаться с нами
@@ -76,43 +76,41 @@
         </div>
         <!-- /preview -->
         <!-- advantages -->
-        <div class="advantages pos-rel">
+        <div class="advantages">
             <div class="advantages__image anim-items anim__showL"><img src="img/advantages-image.png" alt="" class="img-fluid"></div>
             <div class="container">
                 <div class="d-flex">
-                    <div class="advantages__text">
-                        <div class="advantages__headeing anim-items anim__showR">
+                    <div class="advantages__text anim-items anim__showR">
+                        <div class="advantages__headeing">
                             <div class="title_size-sm">УНИКАЛЬНЫЙ ПЕРЕНОС АУДИТОРИИ </div>
                             <p class="text_dark">Мы используем собранную базу самых качественных игроков для переноса событий из прошлых приложений</p>
                         </div>
-                        <div class="anim-items anim__showR">
-                            <div class="advantages-item d-flex align-items-center">
-                                <div class="advantages-item__icon"><img src="img/advantages-1.png" alt="" class="img-fluid"></div>
-                                <div class="advantages-item__text">
-                                    <div class="advantages-item__title">Повышенный траст</div>
-                                    <p>Лёгкость запуска с Facebook</p>
-                                </div>
+                        <div class="advantages-item d-flex align-items-center">
+                            <div class="advantages-item__icon"><img src="img/advantages-1.png" alt="" class="img-fluid"></div>
+                            <div class="advantages-item__text">
+                                <div class="advantages-item__title">Повышенный траст</div>
+                                <p>Лёгкость запуска с Facebook</p>
                             </div>
-                            <div class="advantages-item d-flex align-items-center">
-                                <div class="advantages-item__icon"><img src="img/advantages-2.png" alt="" class="img-fluid"></div>
-                                <div class="advantages-item__text">
-                                    <div class="advantages-item__title">Качество игроков</div>
-                                    <p></p>Улучшение показателей окупаемости трафика (по данным рекламодателя)</p>
-                                </div>
+                        </div>
+                        <div class="advantages-item d-flex align-items-center">
+                            <div class="advantages-item__icon"><img src="img/advantages-2.png" alt="" class="img-fluid"></div>
+                            <div class="advantages-item__text">
+                                <div class="advantages-item__title">Качество игроков</div>
+                                <p></p>Улучшение показателей окупаемости трафика (по данным рекламодателя)</p>
                             </div>
-                            <div class="advantages-item d-flex align-items-center">
-                                <div class="advantages-item__icon"><img src="img/advantages-3.png" alt="" class="img-fluid"></div>
-                                <div class="advantages-item__text">
-                                    <div class="advantages-item__title">Скорость</div>
-                                    <p>Моментальная возможность залива приложения с оптимизацией за Регу/Деп</p>
-                                </div>
+                        </div>
+                        <div class="advantages-item d-flex align-items-center">
+                            <div class="advantages-item__icon"><img src="img/advantages-3.png" alt="" class="img-fluid"></div>
+                            <div class="advantages-item__text">
+                                <div class="advantages-item__title">Скорость</div>
+                                <p>Моментальная возможность залива приложения с оптимизацией за Регу/Деп</p>
                             </div>
-                            <div class="advantages-item d-flex align-items-center">
-                                <div class="advantages-item__icon"><img src="img/advantages-4.png" alt="" class="img-fluid"></div>
-                                <div class="advantages-item__text">
-                                    <div class="advantages-item__title">Самый высокий показатель CR</div>
-                                    <p>ТОП показатели из клик2инстал, инстал2рег, рег2деп</p>
-                                </div>
+                        </div>
+                        <div class="advantages-item d-flex align-items-center">
+                            <div class="advantages-item__icon"><img src="img/advantages-4.png" alt="" class="img-fluid"></div>
+                            <div class="advantages-item__text">
+                                <div class="advantages-item__title">Самый высокий показатель CR</div>
+                                <p>ТОП показатели из клик2инстал, инстал2рег, рег2деп</p>
                             </div>
                         </div>
                     </div>
@@ -124,29 +122,29 @@
         <div class="about">
             <div class="about__image">
                 <img src="img/about.jpg" alt="" class="img-fluid anim-items anim__showOpacity">
-                <img src="img/about-img-1.png" alt="" class="img-fluid anim-items anim__showOpacity about__img-1">
-                <img src="img/about-img-2.png" alt="" class="img-fluid anim-items anim__showOpacity about__img-2">
-                <img src="img/about-img-3.png" alt="" class="img-fluid anim-items anim__showOpacity about__img-3">
+                <img src="img/about-img-1.png" alt="" class="img-fluid about__img-1">
+                <img src="img/about-img-2.png" alt="" class="img-fluid about__img-2">
+                <img src="img/about-img-3.png" alt="" class="img-fluid about__img-3">
             </div>
             <div class="container">
-                <div class="about__text">
+                <div class="about__text anim-items anim__showL">
                     <div class="about__heading">
-                        <div class="title_size-lg anim-items anim__showL">SMART PUSH</div>
-                        <p class="text_dark text_size-md anim-items anim__showL">в приложениях</p>
+                        <div class="title_size-lg">SMART PUSH</div>
+                        <p class="text_dark text_size-md">в приложениях</p>
                     </div>
-                    <div class="about-item anim-items anim__showL">
+                    <div class="about-item">
                         <div class="about-item__image about-item__image_blue"><img src="img/about-1.png" alt="" class="img-fluid"></div>
                         <div class="about-item__text text_size-md">НАТИВНЫЕ ПУШИ ПОД ВСЕ ГЕО</div>
                     </div>
-                    <div class="about-item anim-items anim__showL">
+                    <div class="about-item">
                         <div class="about-item__image about-item__image_yellow"><img src="img/about-2.png" alt="" class="img-fluid"></div>
                         <div class="about-item__text">АВТОПУШИ ПО СОБЫТИЯМ ИНСТ/НЕ РЕГ, РЕГ/НЕ ДЕП, ДЕП/НЕ ПОВТОРНЫЙ ДЕП</div>
                     </div>
-                    <div class="about-item anim-items anim__showL">
+                    <div class="about-item">
                         <div class="about-item__image about-item__image_violet"><img src="img/about-3.png" alt="" class="img-fluid"></div>
                         <div class="about-item__text">ОПОВЕЩЕНИЯ 3 РАЗА В ДЕНЬ</div>
                     </div>
-                    <div class="about-item anim-items anim__showL">
+                    <div class="about-item">
                         <div class="about-item__image about-item__image_white"><img src="img/about-4.png" alt="" class="img-fluid"></div>
                         <div class="about-item__text">МОТИВИРУЮЩИЕ КАРТИНКИ И ИКОНКИ ЦЕПЛЯЮЩИЙ ТЕКСТ </div>
                     </div>
