--- a/CBD/index.html
+++ b/CBD/index.html
@@ -46,6 +46,8 @@
                 <li><a href="user-2.html">Пользователь 39</a></li>
                 <li><a href="favorites.html">Избранное 29</a></li>
                 <li><a href="calculator.html">Калькулятор дозировки 30</a></li>
+                <li><a href="experts.html">Эксперты 13</a></li>
+                <li><a href="expert.html">Эксперт 14</a></li>
             </ul>
         </div>
     </div>
