--- a/CBD/item.html
+++ b/CBD/item.html
@@ -196,6 +196,12 @@
                                 <div class="text-primary">118 отзывов</div>
                             </div>
                         </div>
+                        <div class="product__marker d-flex flex-wrap">
+                            <div class="marker marker_warning">Акция</div>
+                            <div class="marker marker_primary">Новинка</div>
+                            <div class="marker marker_danger">Хит</div>
+                            <div class="marker marker_secondary">Рекомендуем</div>
+                        </div>
                         <div class="title_size-sm product__title">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life
                         </div>
                         <!-- product__concentration -->
