--- a/CBD/catalogue.html
+++ b/CBD/catalogue.html
@@ -137,14 +137,17 @@
                                 <div class="info-item info-item_warning"><div class="test-semibold text-warning">-15%</div></div>
                                 <div class="info-item info-item_success"><img src="img/icons/availability.svg" alt="" class="img-responsive"></div>
                             </div>
-                            <a href="item.html" class="catalogue-item__image catalogue-item__image_margin"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
-                            <div class="catalogue-item__marks d-flex d-lg-none">
+                            <a href="item.html" class="catalogue-item__image pb-1"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
+                            <div class="catalogue-item__marks d-flex">
                                 <div class="mark mark_warning">0-0-12</div>
                                 <div class="mark mark_dark"><img src="img/icons/shares.svg" alt="" class="img-fluid"></div>
                             </div>
                             <div class="d-flex">
-                                <div class="catalogue-item__price">10 500 ₽</div>
-                                <div class="catalogue-item__price_old">13 500 ₽</div>
+                                <div class="d-flex flex-wrap">
+                                    <div class="catalogue-item__price">10 500 ₽</div>
+                                    <div class="catalogue-item__price_old catalogue-item__price_discount">13 500 ₽</div>
+                                </div>
+                                <div class="discount-marker">–15%</div>
                             </div>
                             <a href="item.html" class="catalogue-item__name">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life</a>
                             <div class="wrap-rating d-flex catalogue-item__rating">
@@ -165,15 +168,17 @@
                                 <div class="info-item info-item_warning"><div class="test-semibold text-warning">-15%</div></div>
                                 <div class="info-item info-item_success"><img src="img/icons/availability.svg" alt="" class="img-responsive"></div>
                             </div>
-                            <a href="item.html" class="catalogue-item__image catalogue-item__image_margin"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
-                            <div class="catalogue-item__marks d-flex d-lg-none">
+                            <a href="item.html" class="catalogue-item__image pb-1"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
+                            <div class="catalogue-item__marks d-flex">
                                 <div class="mark mark_warning">0-0-12</div>
                                 <div class="mark mark_dark"><img src="img/icons/shares.svg" alt="" class="img-fluid"></div>
                             </div>
-
                             <div class="d-flex">
-                                <div class="catalogue-item__price">10 500 ₽</div>
-                                <div class="catalogue-item__price_old">13 500 ₽</div>
+                                <div class="d-flex flex-wrap">
+                                    <div class="catalogue-item__price">10 500 ₽</div>
+                                    <div class="catalogue-item__price_old catalogue-item__price_discount">13 500 ₽</div>
+                                </div>
+                                <div class="discount-marker">–15%</div>
                             </div>
                             <a href="item.html" class="catalogue-item__name">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life</a>
                             <div class="wrap-rating d-flex catalogue-item__rating">
@@ -194,15 +199,17 @@
                                 <div class="info-item info-item_warning"><div class="test-semibold text-warning">-15%</div></div>
                                 <div class="info-item info-item_success"><img src="img/icons/availability.svg" alt="" class="img-responsive"></div>
                             </div>
-                            <a href="item.html" class="catalogue-item__image catalogue-item__image_margin"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
-                            <div class="catalogue-item__marks d-flex d-lg-none">
+                            <a href="item.html" class="catalogue-item__image pb-1"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
+                            <div class="catalogue-item__marks d-flex">
                                 <div class="mark mark_warning">0-0-12</div>
                                 <div class="mark mark_dark"><img src="img/icons/shares.svg" alt="" class="img-fluid"></div>
                             </div>
-
                             <div class="d-flex">
-                                <div class="catalogue-item__price">10 500 ₽</div>
-                                <div class="catalogue-item__price_old">13 500 ₽</div>
+                                <div class="d-flex flex-wrap">
+                                    <div class="catalogue-item__price">10 500 ₽</div>
+                                    <div class="catalogue-item__price_old catalogue-item__price_discount">13 500 ₽</div>
+                                </div>
+                                <div class="discount-marker">–15%</div>
                             </div>
                             <a href="item.html" class="catalogue-item__name">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life</a>
                             <div class="wrap-rating d-flex catalogue-item__rating">
@@ -223,15 +230,17 @@
                                 <div class="info-item info-item_warning"><div class="test-semibold text-warning">-15%</div></div>
                                 <div class="info-item info-item_success"><img src="img/icons/availability.svg" alt="" class="img-responsive"></div>
                             </div>
-                            <a href="item.html" class="catalogue-item__image catalogue-item__image_margin"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
-                            <div class="catalogue-item__marks d-flex d-lg-none">
+                            <a href="item.html" class="catalogue-item__image pb-1"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
+                            <div class="catalogue-item__marks d-flex">
                                 <div class="mark mark_warning">0-0-12</div>
                                 <div class="mark mark_dark"><img src="img/icons/shares.svg" alt="" class="img-fluid"></div>
                             </div>
-
                             <div class="d-flex">
-                                <div class="catalogue-item__price">10 500 ₽</div>
-                                <div class="catalogue-item__price_old">13 500 ₽</div>
+                                <div class="d-flex flex-wrap">
+                                    <div class="catalogue-item__price">10 500 ₽</div>
+                                    <div class="catalogue-item__price_old catalogue-item__price_discount">13 500 ₽</div>
+                                </div>
+                                <div class="discount-marker">–15%</div>
                             </div>
                             <a href="item.html" class="catalogue-item__name">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life</a>
                             <div class="wrap-rating d-flex catalogue-item__rating">
@@ -252,15 +261,17 @@
                                 <div class="info-item info-item_warning"><div class="test-semibold text-warning">-15%</div></div>
                                 <div class="info-item info-item_success"><img src="img/icons/availability.svg" alt="" class="img-responsive"></div>
                             </div>
-                            <a href="item.html" class="catalogue-item__image catalogue-item__image_margin"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
-                            <div class="catalogue-item__marks d-flex d-lg-none">
+                            <a href="item.html" class="catalogue-item__image pb-1"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
+                            <div class="catalogue-item__marks d-flex">
                                 <div class="mark mark_warning">0-0-12</div>
                                 <div class="mark mark_dark"><img src="img/icons/shares.svg" alt="" class="img-fluid"></div>
                             </div>
-
                             <div class="d-flex">
-                                <div class="catalogue-item__price">10 500 ₽</div>
-                                <div class="catalogue-item__price_old">13 500 ₽</div>
+                                <div class="d-flex flex-wrap">
+                                    <div class="catalogue-item__price">10 500 ₽</div>
+                                    <div class="catalogue-item__price_old catalogue-item__price_discount">13 500 ₽</div>
+                                </div>
+                                <div class="discount-marker">–15%</div>
                             </div>
                             <a href="item.html" class="catalogue-item__name">Масло КБД "Широкий спектр" 1800мг 6% GoldenSeed.life</a>
                             <div class="wrap-rating d-flex catalogue-item__rating">
