--- a/Lux/index.html
+++ b/Lux/index.html
@@ -192,7 +192,7 @@
                             Наше агентство специализируется на подборе домашнего персонала в семьи и является одним из лучших агентств Казахстана.
                         </div>
                         <p>Мы заслужили репутацию честного партнера, который не скрывает возможных «подводных камней» в подборе того или иного работника. Многие клиенты обращаются к нам снова и рекомендуют нас друзьям, более 70% клиентов приходят к нам по рекомендациям наших клиентов. Наши работники востребованы у самых взыскательных клиентов! </p>
-                        <a href="#" class="btn btn_primary">Подобрать персонал</a>
+                        <a href="#form" class="btn btn_primary" data-bs-toggle="modal">Подобрать персонал</a>
                     </div>
                     <div class="about-section__slider">
                         <div class="about-slider swiper">
@@ -204,7 +204,7 @@
                                     <img src="img/content/about.png" alt="" class="img-fluid">
                                 </div>
                             </div>
-                            <div class="d-flex about-slider__swiper-nav swiper-nav">
+                            <div class="d-flex about-slider__swiper-nav swiper-nav justify-content-center">
                                 <a href="#" class="swiper-prev swiper-arrow"><span class="icon icon-prev"></span></a>
                                 <a href="#" class="swiper-next swiper-arrow"><span class="icon icon-next"></span></a>
                             </div>
@@ -392,7 +392,7 @@
                                 <li class="dots-list__item">Строго относимся к конфиденциальности;</li>
                                 <li class="dots-list__item">Предоставляем взаимовыгодные условия между кандидатом и работодателем;</li>
                             </ul>
-                            <a href="#" class="btn btn_primary">Оставить заявку</a>
+                            <a href="#form" class="btn btn_primary" data-bs-toggle="modal">Оставить заявку</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -410,7 +410,7 @@
                             <div class="text-decoration pb-3">Вещи, из которых состоит VIP-гардероб, как правило брендовые, изготовленные из дорогих, сложных тканей, требующих особого ухода. Справиться с этой непростой задачей Вам поможет горничная по VIP-гардеробу.​
                              </div>
                             <p>Специалист по VIP-гардеробу умеет работать с костюмной группой, обувью, юбки, блузы, платья – из дорогих тканей требуют отдельного ухода.</p>
-                            <a href="#" class="btn btn_primary">Читать подробнее</a>
+                            <a href="#form" class="btn btn_primary" data-bs-toggle="modal">Читать подробнее</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
